shim/third-party/rust/vendor/ghost-0.1.6/tests/ui/pattern-match.stderr
error[E0004]: non-exhaustive patterns: `__Phantom(_)` not covered
 --> tests/ui/pattern-match.rs:9:11
  |
9 |     match phantom {
  |           ^^^^^^^ pattern `__Phantom(_)` not covered
  |
note: `MyPhantom<u8>` defined here
 --> tests/ui/pattern-match.rs:3:1
  |
3 | #[phantom]
  | ^^^^^^^^^^ not covered
4 | struct MyPhantom<T: ?Sized>;
  |        ---------
  = note: the matched value is of type `MyPhantom<u8>`
  = note: this error originates in the attribute macro `phantom` (in Nightly builds, run with -Z macro-backtrace for more info)
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
  |
10~         MyPhantom => {}
11+         __Phantom(_) => todo!()
  |

error[E0004]: non-exhaustive patterns: `__Phantom(_)` not covered
  --> tests/ui/pattern-match.rs:13:11
   |
13 |     match phantom {
   |           ^^^^^^^ pattern `__Phantom(_)` not covered
   |
note: `MyPhantom<u8>` defined here
  --> tests/ui/pattern-match.rs:3:1
   |
3  | #[phantom]
   | ^^^^^^^^^^ not covered
4  | struct MyPhantom<T: ?Sized>;
   |        ---------
   = note: the matched value is of type `MyPhantom<u8>`
   = note: this error originates in the attribute macro `phantom` (in Nightly builds, run with -Z macro-backtrace for more info)
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
14 ~         MyPhantom::<u8> => {}
15 +         __Phantom(_) => todo!()
   |
